<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topQrCodeGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/boardingTextView"
        style="@style/Header2.Bold.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/boarding_time_title"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/boardingTimeTextView"
        style="@style/Title.Bold.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boarding_time_detail"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/boardingTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startAirportTextView"
        style="@style/Body.Bold.Grey300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bkk_airport"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/startDestinationTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endAirportTextView"
        style="@style/Body.Bold.Grey300"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hkt_airport"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/endDestinationTextView" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/passengerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/startAirportTextView"
        app:text_detail="@string/passenger_detail"
        app:text_title="@string/passenger_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/endAirportTextView"
        app:text_detail="@string/date_detail"
        app:text_title="@string/date_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/flightNumberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@id/gateView"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/passengerView"
        app:text_detail="@string/flight_number_detail"
        app:text_title="@string/flight_number_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/gateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/seatView"
        app:layout_constraintStart_toEndOf="@id/flightNumberView"
        app:layout_constraintTop_toTopOf="@id/flightNumberView"
        app:text_detail="@string/gate_detail"
        app:text_title="@string/gate_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/seatView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/classView"
        app:layout_constraintStart_toEndOf="@id/gateView"
        app:layout_constraintTop_toTopOf="@id/gateView"
        app:text_detail="@string/seat_detail"
        app:text_title="@string/seat_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/classView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/seatView"
        app:layout_constraintTop_toTopOf="@id/gateView"
        app:text_detail="@string/class_detail"
        app:text_title="@string/class_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/departureTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/flightNumberView"
        app:text_detail="@string/departure_time_detail"
        app:text_title="@string/departure_time_title" />

    <com.example.boardingpass.BoardingPassDetailView
        android:id="@+id/arrivalTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/classView"
        app:text_detail="@string/arrival_time_detail"
        app:text_title="@string/arrival_time_title" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/bgBottomImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bottom"
        app:altSrc="@drawable/ic_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:overlay="false" />

    <View
        android:id="@+id/bgQrCodeRootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/peach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bgBottomImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/qrCodeDetailTextView"
        style="@style/Body.Bold.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgQrCodeRootView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/qrCodeImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:background="@android:color/white"
        android:src="@drawable/ic_qr_code_github"
        app:contentPadding="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrCodeDetailTextView"
        app:layout_constraintWidth_percent="0.7"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Corner10"
        app:tint="@color/black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passengerNameTitleTextView"
        style="@style/Body.Bold.Grey600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:visibility="invisible"
        android:text="@string/passenger_title"
        app:layout_constraintBottom_toTopOf="@+id/passengerNameTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passengerNameTextView"
        style="@style/Title.Bold.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        android:text="@string/passenger_detail"
        app:layout_constraintBottom_toBottomOf="@+id/bgQrCodeRootView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/planeRouteImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_airplane_with_start_end"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startDestinationTextView"
        style="@style/LargeTitle.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_bkk_airport"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/planeRouteImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endDestinationTextView"
        style="@style/LargeTitle.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_hkt_airport"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/planeRouteImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/bgButtonImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/bgBottomImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bgBottomImageView"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/iconBottomImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_qr_code"
        app:altSrc="@drawable/ic_plane_rotation"
        app:layout_constraintBottom_toBottomOf="@+id/bgButtonImageView"
        app:layout_constraintEnd_toEndOf="@+id/bgButtonImageView"
        app:layout_constraintStart_toStartOf="@+id/bgButtonImageView"
        app:layout_constraintTop_toTopOf="@id/bgButtonImageView"
        app:overlay="false" />

</androidx.constraintlayout.widget.ConstraintLayout>